--- a/Cfrontend/syncclia/src/components/signin.css
+++ b/Cfrontend/syncclia/src/components/signin.css
@@ -4,32 +4,64 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     font-size: 20px;
+    
  }
  .container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    
+
+
     /* background-color: silver; */
     /* background-color: aliceblue; */
  }
  .formDetails{
    height: 300px;
-   width: 30%;
-   background-color: green;
+   width: 25%;
+   background-color: rgb(99, 218, 99);
+   /* opacity: 0.9; */
    border-radius: 10px;
    display: flex;
    justify-content: center;
-   margin: 0 auto;
+   margin: 0 auto ;
+   margin-right: 300px;
+   margin-top: 100px;
    color: white;
 
  }
+ .formDetails h2{
+   margin: 10px;
+   color: black;
+ }
 .synccliaDetails{
-   background-color: #fff;
-   width: 30%;
+   /* background-color: #fff; */
+   width: 40%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
+}
+.synccliaDetails h1{
+   font-size: 4rem;
+}
+.synccliaDetails p{
+   font-size: 1.5rem;
+   padding: 10px;
+}
+#join-para{
+   font-size: 1.2rem;
+}
+.para{
+   /* width: 0%; */
+   margin: 0 auto;
+   padding: 20px;
+   align-items: center;
+   /* color: white; */
+}
+.para p{
+   padding: 10px;
+   /* background-color: white; */
 }
 h2{
    padding-top: 20px;
@@ -56,7 +88,7 @@ input{
    border-left-color: black;
    border-bottom: none;
    border-top: none;
-   background-color: silver;
+   background-color: white;
    color: green;
  
 }
