--- a/Cfrontend/syncclia/src/components/action.css
+++ b/Cfrontend/syncclia/src/components/action.css
@@ -6,6 +6,7 @@
 .action-box{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    
     /* justify-content: center; */
 }
