--- a/Cfrontend/syncclia/src/components/sidenav.css
+++ b/Cfrontend/syncclia/src/components/sidenav.css
@@ -1,20 +1,28 @@
 .sidenav{
-    width: 45%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     height: 80vh;
+
     /* float: right; */
 }
 .sidenav-wrapper{
-    padding: 10px;
+    padding: 20px;
     border-right: 1px solid white;
+    border-bottom: 1px solid white;
+}
+.sidenav-wrapper:hover{
+    background-color: white;
+    color: green;
 }
 .sidenav-header{
-    font-size: 2.5rem;
-    border-bottom: 1px solid white;
+    font-size: 2rem;
+    /* border-bottom: 1px solid white; */
     padding-bottom: 50px;
+
 }
 .sidenav-item{
     /* color: white; */
-    font-size: 1.6rem;
+    font-size: 1.5rem;
+    padding: 10px;
 }
