--- a/Cfrontend/syncclia/src/components/addAction.css
+++ b/Cfrontend/syncclia/src/components/addAction.css
@@ -1,3 +1,15 @@
 h3{
     padding: 5px;
 }
+.actionsForm{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+#gogreenImg{
+    height: 60%;
+    width: 35%;
+    margin-top: 50px;
+    /* border-radius: 50%; */
+    
+}
