--- a/Cfrontend/syncclia/src/components/about.css
+++ b/Cfrontend/syncclia/src/components/about.css
@@ -2,69 +2,72 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-.headline{
-    background-color: white;
+  }
+  
+  .aboutContainer {
+    background-color: #f2f2f2;
+    padding: 50px 0;
+  }
+  
+  .title h1 {
+    font-size: 4rem;
+    color: #4caf50;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  
+  .headline {
+    background-color: #fff;
     width: 60%;
     height: 250px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0 auto;
     align-items: center;
-
-    /* align-content: center; */
-
-}
-.headline h2{
+    margin: 0 auto;
+    margin-bottom: 30px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .headline h2 {
     font-size: 2rem;
-}
-.headline p{
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
+  .headline p {
     padding: 20px;
     font-size: 1.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    
-}
-
-.title h1{
-    font-size: 4rem;
-   color: green;
-   display: flex;
-   justify-content: center;
-   margin: 0 auto;
-   padding: 30px;
-   margin-top: 10px;
-
-}
-/* .headline{
-    background-color: white;
-    height: 50vh;
-    /* align-items: center; */
-/* } */ */
-h2{
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-}
-/* p{
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-} */
-.whatWeDo{
-    /* width: 70%; */
+    text-align: center;
+  }
+  
+  .whatWeDo {
     width: 70%;
-    height: 100vh;
+    height: auto;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
     margin-top: 40px;
-    align-items: center;
-    align-content: space-evenly;
-}
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .whatWeDo h2 {
+    font-size: 2rem;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .whatWeDo p {
+    font-size: 1.2rem;
+    color: #666;
+    text-align: center;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
