--- a/Cfrontend/syncclia/src/components/addAction.css
+++ b/Cfrontend/syncclia/src/components/addAction.css
@@ -1,15 +1,58 @@
-h3{
-    padding: 5px;
-}
-.actionsForm{
+.actionsForm {
     display: flex;
-    flex-direction: row;
-    gap: 30px;
-}
-#gogreenImg{
-    height: 60%;
-    width: 35%;
-    margin-top: 50px;
-    /* border-radius: 50%; */
-    
-}
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding: 20px;
+  }
+  
+  
+  .actionsForm form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .actionsForm h3 {
+    font-size: 1rem;
+    margin-bottom: 5px;
+  }
+  
+  .actionsForm input[type="text"],
+  .actionsForm textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+  
+  .actionsForm input[type="file"] {
+    width: 100%;
+    padding: 10px;
+  }
+  
+  .actionsForm input[type="submit"] {
+    padding: 10px 20px;
+    background-color: #31a24c;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .actionsForm input[type="submit"]:hover {
+    background-color: #218838;
+  }
+  
+  #gogreenImg {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    margin-top: 5px;
+    border-radius: 5px;
+  }
+  
